--- a/Roller_Coaster_Codeca1.ipynb
+++ b/Roller_Coaster_Codeca1.ipynb
@@ -52,7 +52,7 @@
    "source": [
     "Here are the additional questions to section 1 that were hidden under the \"Hint\" section: \n",
     "\n",
-    "How many roller coasters are included in each ranking dataset?"
+    "1.1: How many roller coasters are included in each ranking dataset?"
    ]
   },
   {
@@ -73,7 +73,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "How many different roller coaster suppliers are included in the rankings?"
+    "1.2: How many different roller coaster suppliers are included in the rankings?"
    ]
   },
   {
@@ -91,7 +91,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Do some years include more rankings than other years?"
+    "1.3: Do some years include more rankings than other years?"
    ]
   },
   {
@@ -109,7 +109,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you have a favorite amusement park or there is one near where you live, subset one of the DataFrames on your chosen park. Are there any ranked roller coasters there?"
+    "1.4: If you have a favorite amusement park or there is one near where you live, subset one of the DataFrames on your chosen park. Are there any ranked roller coasters there?"
    ]
   },
   {
